--- a/resources/sass/Object/Project/_register.scss
+++ b/resources/sass/Object/Project/_register.scss
@@ -1,14 +1,9 @@
 .p-register {
-    &__zip {
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    &__terms {
-        height: 160px;
-        overflow-y: auto;
-        line-height: 1.2;
-        font-size: $font-size_m;
-        border: 0.5px solid $boader-color_line;
-    }
+    margin-top: $space_m;
+    padding: $space_s;
+    height: 160px;
+    overflow-y: auto;
+    line-height: 1.2;
+    font-size: $font-size_m;
+    border: 0.5px solid $boader-color_line;
 }
