--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -64,7 +64,7 @@ $font-family_default: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒ
 
 $font-family_corp: 'Arial', sans-serif;
 
-//マップ型変数
+// マップ型変数
 $breakpoints: (
     'sm': 'screen and (max-width: 414px)',
     'md': 'screen and (max-width: 768px)',
@@ -73,6 +73,12 @@ $breakpoints: (
 ) !default;
 
 // mixin
+@mixin mq($breakpoint: md){
+    @media #{map-get($breakpoints, $breakpoint)}{
+        @content;
+    }
+}
+
 @mixin mq($breakpoint: sm){
     @media #{map-get($breakpoints, $breakpoint)}{
         @content;
