--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,32 +7,24 @@
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
 
-// ==========================================================================
 // Foundation
-// ==========================================================================
 @import "foundation/_reset";
 @import "foundation/_base";
 
 
-// ==========================================================================
 // Layout
-// ==========================================================================
+@import 'Layout/article';
 @import 'Layout/container';
 @import 'Layout/footer';
 @import 'Layout/header';
 @import 'Layout/main';
 @import 'Layout/nav';
-@import 'Layout/sidebar';
 
-// ==========================================================================
 // Object
-// ==========================================================================
-
-// -----------------------------------------------------------------
 // Component
-// -----------------------------------------------------------------
-@import 'Object/component/avatar';
 @import 'Object/component/attachment';
+@import 'Object/component/avatar';
+@import 'Object/component/badge';
 @import 'Object/component/button';
 @import 'Object/component/card';
 @import 'Object/component/checkbox';
@@ -46,34 +38,30 @@
 @import 'Object/component/link';
 @import 'Object/component/pagination';
 @import 'Object/component/panel';
+@import 'Object/component/password';
+@import 'Object/component/product__picture';
 @import 'Object/component/product';
-@import 'Object/component/required';
 @import 'Object/component/selectbox';
 @import 'Object/component/text';
 @import 'Object/component/textarea';
 @import 'Object/component/title';
+@import 'Object/component/toast';
 @import 'Object/component/tooltip';
 
-// -----------------------------------------------------------------
 // Project
-// -----------------------------------------------------------------
-@import 'Object/project/article';
-@import 'Object/project/card';
-@import 'Object/project/expiration';
-@import 'Object/project/icon';
 @import 'Object/project/mypage';
 @import 'Object/project/pagination';
 @import 'Object/project/product';
 @import 'Object/project/profile';
 @import 'Object/project/register';
+@import 'Object/project/sidebar';
 @import 'Object/project/terms';
 @import 'Object/project/text';
 @import 'Object/project/textarea';
 @import 'Object/project/withdraw';
 
-// -----------------------------------------------------------------
 // Utility
-// -----------------------------------------------------------------
 @import 'Object/utility/color';
+@import 'Object/utility/font-size';
 @import 'Object/utility/m-x';
 @import 'Object/utility/pd-x';
