--- a/resources/sass/Object/Component/_avatar.scss
+++ b/resources/sass/Object/Component/_avatar.scss
@@ -1,14 +1,14 @@
 .c-avatar {
     width: 200px;
     height: 200px;
+    padding: $space_s;
+    position: relative;
+    margin: auto;
     border-radius: 50%;
-
-    &__container {
-        position: relative;
-        width: 200px;
-        height: 200px;
-        margin: auto;
+    border: 1px solid $boader-color_line;
+    &--img {
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
-        border: 1px solid $boader-color_line;
     }
 }
