--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -1,22 +1,33 @@
 .c-card {
+    margin: $space_s;
+    padding: $space_s;
     border: 1px solid $boader-color_line;
     max-width: 200px;
     font-size: $font-size_default;
-
     @include mq(sm) {
         max-width: 100%;
         font-size: $font-size_m;
+    }
+
+    &__header {
+        padding: $space_s;
+        min-height: 40px;
     }
 
     &__name {
         font-weight: bold;
     }
 
-    &__picture {
+    &__body {
+        position: relative;
+        display: inline-block;
+    }
+
+    &__img {
         display: block;
         width: 200px;
         height: 180px;
-
+        margin-bottom: $space_s;
         @include mq(sm) {
             width: 100%;
             height: 100%;
@@ -37,13 +48,27 @@
 
     &__price {
         width: 25%;
-        right: -8px;
+        right: 0px;
         bottom: 55px;
         font-weight: bold;
+        padding: $space_s 0 $space_s $space_s;
+        @include mq(sm) {
+            width: 30%;
+            bottom: 48px;
+        }
     }
 
     &__category {
         top: 0%;
         font-size: $font-size_m;
+        padding: $space_s;
+        @include mq(sm) {
+            font-size: $font-size_s;
+        }
+    }
+
+    &__footer {
+        display: flex;
+        flex-direction: column;
     }
 }
