--- a/resources/sass/Object/Component/_checkbox.scss
+++ b/resources/sass/Object/Component/_checkbox.scss
@@ -1,7 +1,3 @@
 .c-checkbox {
-    &__container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    margin-right: $space_s;
 }
