--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -2,48 +2,39 @@
     width: 100%;
     height: 50px;
     box-sizing: border-box;
+    padding: $space_s;
+    margin: $space_m 0;
+    font-size: $font-size_default;
     background: $background-color_main;
     border: 1px solid $boader-color_line;
-    font-size: $font-size_default;
 
     @include mq(sm) {
-        height: 32px;
         margin: $space_s 0;
-        font-size: $font-size_m;
-
-        &::placeholder {
-            font-size: $font-size_m;
-        }
+        font-size: $font-size_default;
     }
 
-    &__price {
+    &::placeholder {
+        font-size: $font-size_default;
+    }
+
+    &--price {
         width: 35%;
     }
 
-    &__date {
+    &--date {
         display: flex;
         align-items: center;
     }
 
-    &__password {
-        position: relative;
-
-        span {
-            position: absolute;
-            top: 50%;
-            right: 16px;
-            transform: translateY(-50%);
-            cursor: pointer;
-        }
-    }
-
-    &__hidden {
+    &--hidden {
         position: absolute;
         width: 100%;
         height: 100%;
         opacity: 0;
         z-index: 1;
         cursor: pointer;
+        right: 0;
+        top: 0;
     }
 
     &.is-invalid {
@@ -52,5 +43,11 @@
 
     &__search {
         width: 75%;
+        margin: $space_s 0;
+        padding: $space_s;
+    }
+
+    &__radio {
+        margin: $space_s 0;
     }
 }
