--- a/resources/sass/Object/Component/_link.scss
+++ b/resources/sass/Object/Component/_link.scss
@@ -1,5 +1,5 @@
 .c-link {
-    display: block;
+    display: inline-block;
     text-align: center;
     text-decoration: none;
     color: $font-color_default;
