--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -25,6 +25,7 @@
     }
     &--convenience {
         display: flex;
+        justify-content: space-around;
     }
     &--avatar {
         width: 100px;
