--- a/public/css/app.css
+++ b/public/css/app.css
@@ -202,12 +202,11 @@ body {
   width: 100%;
 }
 
-#l-footer {
+.l-footer {
   width: 100%;
-  height: 30px;
 }
 
-#l-footer__pagetop {
+.l-footer__pagetop {
   height: 50px;
   width: 50px;
   position: fixed;
@@ -222,7 +221,7 @@ body {
   z-index: 2;
 }
 
-#l-footer__pagetop--arrow {
+.l-footer__pagetop--arrow {
   height: 10px;
   width: 10px;
   border-top: 3px solid #434343;
@@ -230,7 +229,7 @@ body {
   transform: translateY(20%) rotate(-45deg);
 }
 
-#l-footer__pagetop.UpMove {
+.l-footer__pagetop.UpMove {
   animation: UpAnime 0.5s forwards;
 }
 
@@ -246,7 +245,7 @@ body {
   }
 }
 
-#l-footer__pagetop.DownMove {
+.l-footer__pagetop.DownMove {
   animation: DownAnime 0.5s forwards;
 }
 
@@ -262,22 +261,27 @@ body {
   }
 }
 
-#l-footer__inner {
+.l-footer__inner {
   line-height: 2.5;
   text-align: center;
   background-color: #eee;
   color: #434343;
+  padding: 16px;
 }
 
-#l-footer__text {
+.l-footer__copyright {
   font-size: 16px;
   color: #434343;
 }
 
 @media screen and (max-width: 414px) {
-  #l-footer__text {
-    font-size: 8px;
+  .l-footer__copyright {
+    font-size: 12px;
   }
+}
+
+.l-footer__link {
+  margin-top: 8px;
 }
 
 .l-header {
@@ -292,13 +296,13 @@ body {
   top: 0;
   z-index: 2;
   opacity: 0.9;
+  padding: 0 32px;
 }
 
 @media screen and (max-width: 414px) {
   .l-header {
     height: 60px;
-    padding-right: 24px;
-    padding-left: 24px;
+    padding: 0 24px;
   }
 }
 
@@ -307,7 +311,7 @@ body {
   justify-content: space-between;
 }
 
-.l-header__title {
+.l-header__logo {
   font-family: "Arial", sans-serif;
   font-style: italic;
   font-weight: bold;
@@ -318,7 +322,7 @@ body {
 }
 
 @media screen and (max-width: 414px) {
-  .l-header__title {
+  .l-header__logo {
     font-size: 40px;
   }
 }
@@ -363,9 +367,89 @@ body {
   }
 }
 
+.l-nav__trigger {
+  display: none;
+  transition: all 0.4s;
+  box-sizing: border-box;
+  position: relative;
+  width: 40px;
+  height: 32px;
+  z-index: 3;
+}
+
+@media screen and (max-width: 768px) {
+  .l-nav__trigger {
+    display: inline-block;
+    margin-top: 16px;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__trigger {
+    display: inline-block;
+    margin-top: 16px;
+  }
+}
+
+.l-nav__trigger span {
+  display: inline-block;
+  transition: all 0.4s;
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #434343;
+  border-radius: 4px;
+}
+
+.l-nav__trigger span:nth-of-type(1) {
+  top: 0;
+}
+
+.l-nav__trigger span:nth-of-type(2) {
+  top: 14px;
+}
+
+.l-nav__trigger span:nth-of-type(3) {
+  bottom: 0;
+}
+
+.l-nav__trigger.is-active span:nth-of-type(1) {
+  transform: translateY(12px) rotate(-45deg);
+}
+
+.l-nav__trigger.is-active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.l-nav__trigger.is-active span:nth-of-type(3) {
+  transform: translateY(-15px) rotate(45deg);
+}
+
 .l-nav__menu {
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .l-nav__menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background: rgba(0, 0, 0, 0.65);
+    width: 100%;
+    height: 100vh;
+    padding-top: 48px;
+    transition: 0.5s;
+    z-index: 2;
+  }
+
+  .l-nav__menu.is-active {
+    transition: 0.5s;
+    transform: translateX(-100%);
+  }
 }
 
 @media screen and (max-width: 414px) {
@@ -388,66 +472,13 @@ body {
   }
 }
 
-.l-nav__menu--trigger {
-  display: none;
-  transition: all 0.4s;
-  box-sizing: border-box;
-  position: relative;
-  width: 40px;
-  height: 32px;
-  z-index: 3;
-}
-
-@media screen and (max-width: 414px) {
-  .l-nav__menu--trigger {
-    display: inline-block;
-    margin-top: 16px;
-  }
-}
-
-.l-nav__menu--trigger span {
-  display: inline-block;
-  transition: all 0.4s;
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #434343;
-  border-radius: 4px;
-}
-
-.l-nav__menu--trigger span:nth-of-type(1) {
-  top: 0;
-}
-
-.l-nav__menu--trigger span:nth-of-type(2) {
-  top: 14px;
-}
-
-.l-nav__menu--trigger span:nth-of-type(3) {
-  bottom: 0;
-}
-
-.l-nav__menu--trigger.is-active span:nth-of-type(1) {
-  transform: translateY(12px) rotate(-45deg);
-}
-
-.l-nav__menu--trigger.is-active span:nth-of-type(2) {
-  opacity: 0;
-}
-
-.l-nav__menu--trigger.is-active span:nth-of-type(3) {
-  transform: translateY(-15px) rotate(45deg);
-}
-
-.l-nav__menu--list {
+.l-nav__list {
   display: flex;
   align-items: center;
 }
 
-@media screen and (max-width: 414px) {
-  .l-nav__menu--list {
+@media screen and (max-width: 768px) {
+  .l-nav__list {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -455,7 +486,21 @@ body {
   }
 }
 
-.l-nav__menu--link {
+@media screen and (max-width: 414px) {
+  .l-nav__list {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+  }
+}
+
+.l-nav__item {
+  list-style: none;
+  line-height: 60px;
+}
+
+.l-nav__link {
   margin: 0 32px;
   text-decoration: none;
   position: relative;
@@ -463,7 +508,7 @@ body {
   font-size: 16px;
 }
 
-.l-nav__menu--link::after {
+.l-nav__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -476,47 +521,50 @@ body {
   transition: transform 0.3s;
 }
 
-@media screen and (max-width: 414px) {
-  .l-nav__menu--link::after {
+@media screen and (max-width: 768px) {
+  .l-nav__link::after {
     display: none;
   }
 }
 
-.l-nav__menu--link:hover::after {
+@media screen and (max-width: 414px) {
+  .l-nav__link::after {
+    display: none;
+  }
+}
+
+.l-nav__link:hover::after {
   transform: scale(1, 1);
 }
 
-.l-nav__menu--item {
-  list-style: none;
-  line-height: 60px;
-}
-
-@media screen and (max-width: 414px) {
-  .l-nav__menu--name {
-    color: #fefefe;
-    font-size: 24px;
-    font-weight: bold;
-  }
-}
-
-.l-nav__menu--avatar {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-}
-
-@media screen and (max-width: 414px) {
-  .l-nav__menu {
-    display: block;
+@media screen and (max-width: 768px) {
+  .l-nav__list {
     font-size: 40px;
   }
 
-  .l-nav__menu--item {
+  .l-nav__item {
     margin-right: initial;
   }
 
-  .l-nav__menu--link {
+  .l-nav__link {
+    -webkit-font-smoothing: initial;
+    display: block;
+    padding: 16px 0;
+    text-align: center;
+    color: #fefefe;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__list {
+    font-size: 40px;
+  }
+
+  .l-nav__item {
+    margin-right: initial;
+  }
+
+  .l-nav__link {
     -webkit-font-smoothing: initial;
     display: block;
     padding: 16px 0;
@@ -1011,7 +1059,7 @@ body {
 }
 
 .c-link {
-  display: block;
+  display: inline-block;
   text-align: center;
   text-decoration: none;
   color: #434343;
@@ -1066,7 +1114,7 @@ body {
   color: #fefefe;
 }
 
-.c-pagination.inactive {
+.c-pagination .inactive {
   color: #32cd32;
 }
 
@@ -1227,6 +1275,7 @@ body {
 
 .c-product--convenience {
   display: flex;
+  justify-content: space-around;
 }
 
 .c-product--avatar {
@@ -1349,17 +1398,17 @@ body {
 }
 
 .c-toast {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
-  padding: 16px;
+  padding: 8px 0;
   color: #fefefe;
   font-weight: bold;
   opacity: 0.9;
   z-index: 3;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .c-toast__success {
@@ -1385,7 +1434,7 @@ body {
   border-radius: 4px;
   background: #000;
   width: 150px;
-  top: -180%;
+  top: -150%;
   z-index: 2;
   transform: translateX(-110%);
 }
@@ -1434,6 +1483,7 @@ body {
 }
 
 .p-pagination {
+  margin-top: 16px;
   display: flex;
   justify-content: center;
 }
@@ -1500,6 +1550,7 @@ body {
 @media screen and (max-width: 768px) {
   .p-sidebar__profile {
     flex-direction: row;
+    justify-content: center;
   }
 }
 
