--- a/resources/sass/Layout/_nav.scss
+++ b/resources/sass/Layout/_nav.scss
@@ -1,8 +1,71 @@
 .l-nav {
+    &__trigger {
+        display: none;
+        @include mq(md) {
+            display: inline-block;
+            margin-top: $space_m;
+        }
+        @include mq(sm) {
+            display: inline-block;
+            margin-top: $space_m;
+        }
+        transition: all .4s;
+        box-sizing: border-box;
+        position: relative;
+        width: 40px;
+        height: 32px;
+        z-index: 3;
+        span {
+            display: inline-block;
+            transition: all .4s;
+            box-sizing: border-box;
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background-color: $font-color_default;
+            border-radius: 4px;
+            &:nth-of-type(1) {
+                top: 0;
+            }
+            &:nth-of-type(2) {
+                top: 14px;
+            }
+            &:nth-of-type(3) {
+                bottom: 0;
+            }
+        }
+        &.is-active span {
+            &:nth-of-type(1) {
+                transform: translateY(12px) rotate(-45deg);
+            }
+            &:nth-of-type(2) {
+                opacity: 0;
+            }
+            &:nth-of-type(3) {
+                transform: translateY(-15px) rotate(45deg);
+            }
+        }
+    }
     &__menu {
         display: flex;
         align-items: center;
-
+        @include mq(md) {
+            display: block;
+            position: fixed;
+            top: 0;
+            right: -100%;
+            background: rgba(0, 0, 0, .65);
+            width: 100%;
+            height: 100vh;
+            padding-top: $space_3l;
+            transition: .5s;
+            z-index: 2;
+            &.is-active {
+                transition: .5s;
+                transform: translateX(-100%);
+            }
+        }
         @include mq(sm) {
             display: block;
             position: fixed;
@@ -14,138 +77,88 @@
             padding-top: $space_3l;
             transition: .5s;
             z-index: 2;
-
             &.is-active {
                 transition: .5s;
                 transform: translateX(-100%);
             }
         }
-
-        &--trigger {
-            display: none;
-
-            @include mq(sm) {
-                display: inline-block;
-                margin-top: $space_m;
-            }
-
-            transition: all .4s;
-            box-sizing: border-box;
-            position: relative;
-            width: 40px;
-            height: 32px;
-            z-index: 3;
-
-            span {
-                display: inline-block;
-                transition: all .4s;
-                box-sizing: border-box;
-                position: absolute;
-                left: 0;
-                width: 100%;
-                height: 4px;
-                background-color: $font-color_default;
-                border-radius: 4px;
-
-                &:nth-of-type(1) {
-                    top: 0;
-                }
-                &:nth-of-type(2) {
-                    top: 14px;
-                }
-                &:nth-of-type(3) {
-                    bottom: 0;
-                }
-            }
-
-            &.is-active span {
-                &:nth-of-type(1) {
-                    transform: translateY(12px) rotate(-45deg);
-                }
-                &:nth-of-type(2) {
-                    opacity: 0;
-                }
-                &:nth-of-type(3) {
-                    transform: translateY(-15px) rotate(45deg);
-                }
-            }
-        }
-        
-        &--list {
+    }
+    &__list {
+        display: flex;
+        align-items: center;
+        @include mq(md) {
+            text-align: center;
             display: flex;
-            align-items: center;
-
-            @include mq(sm) {
-                text-align: center;
-                display: flex;
-                flex-direction: column;
-                padding: $space_xxl;
-            }
+            flex-direction: column;
+            padding: $space_xxl;
         }
-
-        &--link {
-            margin: 0 $space_xl;
-            text-decoration: none;
-            position: relative;
-            color: $font-color_default;
-            font-size: $font-size_default;
-
-            &::after {
-                content: '';
-                position: absolute;
-                left: 0;
-                width: 100%;
-                height: 1px;
-                background: $background-color_sub3;
-                bottom: -1px;
-                transform: scale(0, 1);
-                transform-origin: left top;
-                transition: transform 0.3s;
-                @include mq(sm){
-                    display: none;
-                }
-            }
-
-            &:hover::after {
-                transform: scale(1, 1);
-            }
-        }
-
-        &--item {
-            list-style: none;
-            line-height: 60px;
-        }
-
-        &--name {
-            @include mq(sm) {
-                color: $font-color_sub;
-                font-size: $font-size_l;
-                font-weight: bold;
-            }
-        }
-
-        &--avatar {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-        }
-
         @include mq(sm) {
-            display: block;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            padding: $space_xxl;
+        }
+    }
+    &__item {
+        list-style: none;
+        line-height: 60px;
+    }
+    &__link {
+        margin: 0 $space_xl;
+        text-decoration: none;
+        position: relative;
+        color: $font-color_default;
+        font-size: $font-size_default;
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background: $background-color_sub3;
+            bottom: -1px;
+            transform: scale(0, 1);
+            transform-origin: left top;
+            transition: transform 0.3s;
+            @include mq(md){
+                display: none;
+            }
+            @include mq(sm){
+                display: none;
+            }
+        }
+        &:hover::after {
+            transform: scale(1, 1);
+        }
+    }
+    @include mq(md) {
+        &__list {
             font-size: $font-size_xxl;
-
-            &--item {
-                margin-right: initial;
-            }
-
-            &--link {
-                -webkit-font-smoothing: initial;
-                display: block;
-                padding: 16px 0;
-                text-align: center;
-                color: $font-color_sub;
-            }
+        }
+        &__item {
+            margin-right: initial;
+        }
+        &__link {
+            -webkit-font-smoothing: initial;
+            display: block;
+            padding: 16px 0;
+            text-align: center;
+            color: $font-color_sub;
+        }
+    }
+    @include mq(sm) {
+        &__list {
+            font-size: $font-size_xxl;
+        }
+        &__item {
+            margin-right: initial;
+        }
+        &__link {
+            -webkit-font-smoothing: initial;
+            display: block;
+            padding: 16px 0;
+            text-align: center;
+            color: $font-color_sub;
         }
     }
 }
