--- a/resources/sass/Object/Component/_pagination.scss
+++ b/resources/sass/Object/Component/_pagination.scss
@@ -1,31 +1,25 @@
 .c-pagination {
     display: flex;
     list-style-type: none;
-
     & li {
         border: 1px solid $boader-color_line;
         padding: $space_l;
         text-align: center;
-
         @include mq(sm) {
             padding: $space_s;
         }  
     }
-
     & .active {
-        background-color: #32cd32;
+        background-color: $background-color_btn_primary;
         color: $font-color_sub;
     }
-
-    &.inactive{
-        color: #32cd32;
+    & .inactive{
+        color: $background-color_btn_primary;
     }
-
     & li + li {
         border-left: none;
     }
 }
-
 .disabled {
     cursor: not-allowed;
 }
