--- a/resources/sass/Object/Project/_sidebar.scss
+++ b/resources/sass/Object/Project/_sidebar.scss
@@ -9,6 +9,7 @@
         flex-direction: column;
         @include mq(md) {
             flex-direction: row;
+            justify-content: center;
         }
     }
     &__avatar-wrap {
